--- a/cie-config/.harness/paymentservice.yaml
+++ b/cie-config/.harness/paymentservice.yaml
@@ -62,4 +62,19 @@ pipeline:
                                         limits:
                                             memory: 1Gi
                                             cpu: "1"
+                          - step:
+                                type: BuildAndPushDockerRegistry
+                                name: pushToDockerHub
+                                identifier: pushToDockerHub
+                                spec:
+                                    connectorRef: account.bootcampdockerhub
+                                    repo: nikpap/payment-service
+                                    tags:
+                                        - joshgeorge94-latest
+                                    dockerfile: /harness/payment-service/Dockerfile
+                                    optimize: true
+                                    resources:
+                                        limits:
+                                            memory: 1Gi
+                                            cpu: "1"
               variables: []
